--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -11,7 +11,7 @@
 <body>
     {% include "base/navbar.html" %}
     
-    <div style="margin: 0 50px;">
+    <div style="margin: 0 50px; margin-top: 25px;">
         {% block content %}
         {% endblock %}
     </div>    
