--- a/templates/crear_receta.html
+++ b/templates/crear_receta.html
@@ -8,21 +8,81 @@
 
 {% block content %}
 
-    <h3>Crear receta (crear_receta.html)</h3>
+    <h1>Crea tu propia receta</h3>
     <form>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        <div class="card-body">
+          <div class="card">
+            <div class="card-body">
+              <div class="container">
+                <div class="mb-2">
+                  <label for="exampleFormControlInput1" class="form-label fs-4">Nombra tu receta</label>             
+                </div>
+                <div class="input-group mb-3">
+                  <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
+                  <label class="btn btn-outline-success" for="btncheck1">Apta para vegetarianos</label>
+                  <input type="text" class="form-control" placeholder="Pasta alfredo clásica" aria-label="Example text with button addon" aria-describedby="button-addon1">
+                </div> 
+                <div class="row">
+                  <div class="col-md">
+                    <div class="card">
+                      <div class="card-header text-center fw-bold">
+                        Ingredientes
+                      </div>
+                      <div class="card-body">
+                        <div class="row g-3 align-items-center">
+                          <div class="col-auto">
+                            <span id="passwordHelpInline" class="form-text">
+                              Especifíca cantidades
+                            </span>
+                          </div>
+                          <div class="input-group mb-3">
+                            <span class="input-group-text" id="inputGroup-sizing-default">Ingrediente</span>
+                            <input type="text" class="form-control" placeholder="500gr de pasta Spaghetti" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                          </div>
+                          <div class="d-grid gap-2">
+                            <button class="btn btn-success" type="button">Agregar ingrediente</button>
+                          </div>
+                        </div>        
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md">
+                    <div class="card">
+                      <div class="card-header text-center fw-bold">
+                        Instrucciones
+                      </div>
+                      <div class="card-body">
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                          <label class="form-check-label" for="inlineRadio1">Fácil</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                          <label class="form-check-label" for="inlineRadio1">Normal</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                          <label class="form-check-label" for="inlineRadio1">Difícil</label>
+                        </div>
+                      </div>
+                      <div class="card-body">
+                        <div class="mb-3">
+                          <div class="input-group mb-3">
+                            <span class="input-group-text" id="inputGroup-sizing-default">Paso 1</span>
+                            <input type="text" class="form-control" placeholder="Prepara la pasta" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                          </div>
+                          <label for="exampleFormControlTextarea1" class="form-label">Detalles</label>
+                          <textarea class="form-control" placeholder="Llena una olla grande con 1 litro de agua, agrega un puñado de sal y espera que hierva[..]" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                        <div class="d-grid gap-2">
+                          <button class="btn btn-success" type="button">Agregar paso</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </div>
         </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
 {% endblock %}
