--- a/templates/crear_receta.html
+++ b/templates/crear_receta.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="input-group mb-3">
                   <input type="checkbox" class="btn-check" id="btncheck1" autocomplete="off">
-                  <label class="btn btn-outline-success" for="btncheck1">Apta para vegetarianos</label>
+                  <label class="btn btn-outline-success" for="btncheck1">Vegetariana</label>
                   <input type="text" class="form-control" placeholder="Pasta alfredo clásica" aria-label="Example text with button addon" aria-describedby="button-addon1">
                 </div> 
                 <div class="row">
