--- a/templates/big_card.html
+++ b/templates/big_card.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "/base/base.html" %}
 
 
 {%block name%}
@@ -7,5 +7,60 @@
 
 
 {% block content %}
-    Hola mundo
+    
+<div class="card">
+    <div class="card-header text-center fs-2">
+      {{receta.nombre}}
+    </div>
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true" style="color: green;">Descripción</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false" style="color: green;">Ingredientes</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false" style="color: green;">Instrucciones</button>
+        </li>
+      </ul>
+      <div class="tab-content" id="myTabContent">
+        <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+
+        </div>
+        <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+            <div class="card-body">
+                <div class="row">
+                    <p class="text-center fs-2">Instrucciones</p>
+                    <div class="col">
+                      <div>
+                        
+                      </div>
+                    <div class="col">
+                        <img src="https://res.cloudinary.com/teepublic/image/private/s--hfe0mRi6--/t_Resized%20Artwork/c_fit,g_north_west,h_954,w_954/co_000000,e_outline:48/co_000000,e_outline:inner_fill:48/co_ffffff,e_outline:48/co_ffffff,e_outline:inner_fill:48/co_bbbbbb,e_outline:3:1000/c_mpad,g_center,h_1260,w_1260/b_rgb:eeeeee/c_limit,f_auto,h_630,q_90,w_630/v1595942619/production/designs/12588177_0.jpg" alt="">
+                    </div>
+                </div>   
+            </div>
+        </div>
+      </div>
+    <div class="card-footer text-muted">
+      2 days ago
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 {% endblock %}
