--- a/static/css/main.css
+++ b/static/css/main.css
@@ -28,8 +28,16 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #FE8B6A;
-  --bs-primary-rgb: 254, 139, 106;
+  --bs-primary: #e3170a;
+  --bs-secondary: #e16036;
+  --bs-success: #d6a99a;
+  --bs-info: #d6cbc1;
+  --bs-warning: rgba(233, 33, 19, 0.787);
+  --bs-primary-rgb: 227, 23, 10;
+  --bs-secondary-rgb: 225, 96, 54;
+  --bs-success-rgb: 214, 169, 154;
+  --bs-info-rgb: 214, 203, 193;
+  --bs-warning-rgb: 233, 33, 19;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
@@ -2913,57 +2921,277 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  color: #000;
-  background-color: #FE8B6A;
-  border-color: #FE8B6A;
+  color: #fff;
+  background-color: #e3170a;
+  border-color: #e3170a;
 }
 .btn-primary:hover {
-  color: #000;
-  background-color: #fe9c80;
-  border-color: #fe9779;
+  color: #fff;
+  background-color: #c11409;
+  border-color: #b61208;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
-  color: #000;
-  background-color: #fe9c80;
-  border-color: #fe9779;
-  box-shadow: 0 0 0 0.25rem rgba(216, 118, 90, 0.5);
+  color: #fff;
+  background-color: #c11409;
+  border-color: #b61208;
+  box-shadow: 0 0 0 0.25rem rgba(231, 58, 47, 0.5);
 }
 .btn-check:checked + .btn-primary, .btn-check:active + .btn-primary, .btn-primary:active, .btn-primary.active, .show > .btn-primary.dropdown-toggle {
-  color: #000;
-  background-color: #fea288;
-  border-color: #fe9779;
+  color: #fff;
+  background-color: #b61208;
+  border-color: #aa1108;
 }
 .btn-check:checked + .btn-primary:focus, .btn-check:active + .btn-primary:focus, .btn-primary:active:focus, .btn-primary.active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.25rem rgba(216, 118, 90, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(231, 58, 47, 0.5);
 }
 .btn-primary:disabled, .btn-primary.disabled {
+  color: #fff;
+  background-color: #e3170a;
+  border-color: #e3170a;
+}
+
+.btn-secondary {
   color: #000;
-  background-color: #FE8B6A;
-  border-color: #FE8B6A;
+  background-color: #e16036;
+  border-color: #e16036;
+}
+.btn-secondary:hover {
+  color: #000;
+  background-color: #e67854;
+  border-color: #e4704a;
+}
+.btn-check:focus + .btn-secondary, .btn-secondary:focus {
+  color: #000;
+  background-color: #e67854;
+  border-color: #e4704a;
+  box-shadow: 0 0 0 0.25rem rgba(191, 82, 46, 0.5);
+}
+.btn-check:checked + .btn-secondary, .btn-check:active + .btn-secondary, .btn-secondary:active, .btn-secondary.active, .show > .btn-secondary.dropdown-toggle {
+  color: #000;
+  background-color: #e7805e;
+  border-color: #e4704a;
+}
+.btn-check:checked + .btn-secondary:focus, .btn-check:active + .btn-secondary:focus, .btn-secondary:active:focus, .btn-secondary.active:focus, .show > .btn-secondary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.25rem rgba(191, 82, 46, 0.5);
+}
+.btn-secondary:disabled, .btn-secondary.disabled {
+  color: #000;
+  background-color: #e16036;
+  border-color: #e16036;
+}
+
+.btn-success {
+  color: #000;
+  background-color: #d6a99a;
+  border-color: #d6a99a;
+}
+.btn-success:hover {
+  color: #000;
+  background-color: #dcb6a9;
+  border-color: #dab2a4;
+}
+.btn-check:focus + .btn-success, .btn-success:focus {
+  color: #000;
+  background-color: #dcb6a9;
+  border-color: #dab2a4;
+  box-shadow: 0 0 0 0.25rem rgba(182, 144, 131, 0.5);
+}
+.btn-check:checked + .btn-success, .btn-check:active + .btn-success, .btn-success:active, .btn-success.active, .show > .btn-success.dropdown-toggle {
+  color: #000;
+  background-color: #debaae;
+  border-color: #dab2a4;
+}
+.btn-check:checked + .btn-success:focus, .btn-check:active + .btn-success:focus, .btn-success:active:focus, .btn-success.active:focus, .show > .btn-success.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.25rem rgba(182, 144, 131, 0.5);
+}
+.btn-success:disabled, .btn-success.disabled {
+  color: #000;
+  background-color: #d6a99a;
+  border-color: #d6a99a;
+}
+
+.btn-info {
+  color: #000;
+  background-color: #d6cbc1;
+  border-color: #d6cbc1;
+}
+.btn-info:hover {
+  color: #000;
+  background-color: #dcd3ca;
+  border-color: #dad0c7;
+}
+.btn-check:focus + .btn-info, .btn-info:focus {
+  color: #000;
+  background-color: #dcd3ca;
+  border-color: #dad0c7;
+  box-shadow: 0 0 0 0.25rem rgba(182, 173, 164, 0.5);
+}
+.btn-check:checked + .btn-info, .btn-check:active + .btn-info, .btn-info:active, .btn-info.active, .show > .btn-info.dropdown-toggle {
+  color: #000;
+  background-color: #ded5cd;
+  border-color: #dad0c7;
+}
+.btn-check:checked + .btn-info:focus, .btn-check:active + .btn-info:focus, .btn-info:active:focus, .btn-info.active:focus, .show > .btn-info.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.25rem rgba(182, 173, 164, 0.5);
+}
+.btn-info:disabled, .btn-info.disabled {
+  color: #000;
+  background-color: #d6cbc1;
+  border-color: #d6cbc1;
+}
+
+.btn-warning {
+  color: #000;
+  background-color: rgba(233, 33, 19, 0.787);
+  border-color: rgba(233, 33, 19, 0.787);
+}
+.btn-warning:hover {
+  color: #000;
+  background-color: rgba(238, 80, 69, 0.81895);
+  border-color: rgba(236, 65, 54, 0.8083);
+}
+.btn-check:focus + .btn-warning, .btn-warning:focus {
+  color: #000;
+  background-color: rgba(238, 80, 69, 0.81895);
+  border-color: rgba(236, 65, 54, 0.8083);
+  box-shadow: 0 0 0 0.25rem rgba(183, 26, 15, 0.5);
+}
+.btn-check:checked + .btn-warning, .btn-check:active + .btn-warning, .btn-warning:active, .btn-warning.active, .show > .btn-warning.dropdown-toggle {
+  color: #000;
+  background-color: rgba(239, 95, 85, 0.8296);
+  border-color: rgba(236, 65, 54, 0.8083);
+}
+.btn-check:checked + .btn-warning:focus, .btn-check:active + .btn-warning:focus, .btn-warning:active:focus, .btn-warning.active:focus, .show > .btn-warning.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.25rem rgba(183, 26, 15, 0.5);
+}
+.btn-warning:disabled, .btn-warning.disabled {
+  color: #000;
+  background-color: rgba(233, 33, 19, 0.787);
+  border-color: rgba(233, 33, 19, 0.787);
 }
 
 .btn-outline-primary {
-  color: #FE8B6A;
-  border-color: #FE8B6A;
+  color: #e3170a;
+  border-color: #e3170a;
 }
 .btn-outline-primary:hover {
-  color: #000;
-  background-color: #FE8B6A;
-  border-color: #FE8B6A;
+  color: #fff;
+  background-color: #e3170a;
+  border-color: #e3170a;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
-  box-shadow: 0 0 0 0.25rem rgba(254, 139, 106, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(227, 23, 10, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
-  color: #000;
-  background-color: #FE8B6A;
-  border-color: #FE8B6A;
+  color: #fff;
+  background-color: #e3170a;
+  border-color: #e3170a;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
-  box-shadow: 0 0 0 0.25rem rgba(254, 139, 106, 0.5);
+  box-shadow: 0 0 0 0.25rem rgba(227, 23, 10, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #FE8B6A;
+  color: #e3170a;
+  background-color: transparent;
+}
+
+.btn-outline-secondary {
+  color: #e16036;
+  border-color: #e16036;
+}
+.btn-outline-secondary:hover {
+  color: #000;
+  background-color: #e16036;
+  border-color: #e16036;
+}
+.btn-check:focus + .btn-outline-secondary, .btn-outline-secondary:focus {
+  box-shadow: 0 0 0 0.25rem rgba(225, 96, 54, 0.5);
+}
+.btn-check:checked + .btn-outline-secondary, .btn-check:active + .btn-outline-secondary, .btn-outline-secondary:active, .btn-outline-secondary.active, .btn-outline-secondary.dropdown-toggle.show {
+  color: #000;
+  background-color: #e16036;
+  border-color: #e16036;
+}
+.btn-check:checked + .btn-outline-secondary:focus, .btn-check:active + .btn-outline-secondary:focus, .btn-outline-secondary:active:focus, .btn-outline-secondary.active:focus, .btn-outline-secondary.dropdown-toggle.show:focus {
+  box-shadow: 0 0 0 0.25rem rgba(225, 96, 54, 0.5);
+}
+.btn-outline-secondary:disabled, .btn-outline-secondary.disabled {
+  color: #e16036;
+  background-color: transparent;
+}
+
+.btn-outline-success {
+  color: #d6a99a;
+  border-color: #d6a99a;
+}
+.btn-outline-success:hover {
+  color: #000;
+  background-color: #d6a99a;
+  border-color: #d6a99a;
+}
+.btn-check:focus + .btn-outline-success, .btn-outline-success:focus {
+  box-shadow: 0 0 0 0.25rem rgba(214, 169, 154, 0.5);
+}
+.btn-check:checked + .btn-outline-success, .btn-check:active + .btn-outline-success, .btn-outline-success:active, .btn-outline-success.active, .btn-outline-success.dropdown-toggle.show {
+  color: #000;
+  background-color: #d6a99a;
+  border-color: #d6a99a;
+}
+.btn-check:checked + .btn-outline-success:focus, .btn-check:active + .btn-outline-success:focus, .btn-outline-success:active:focus, .btn-outline-success.active:focus, .btn-outline-success.dropdown-toggle.show:focus {
+  box-shadow: 0 0 0 0.25rem rgba(214, 169, 154, 0.5);
+}
+.btn-outline-success:disabled, .btn-outline-success.disabled {
+  color: #d6a99a;
+  background-color: transparent;
+}
+
+.btn-outline-info {
+  color: #d6cbc1;
+  border-color: #d6cbc1;
+}
+.btn-outline-info:hover {
+  color: #000;
+  background-color: #d6cbc1;
+  border-color: #d6cbc1;
+}
+.btn-check:focus + .btn-outline-info, .btn-outline-info:focus {
+  box-shadow: 0 0 0 0.25rem rgba(214, 203, 193, 0.5);
+}
+.btn-check:checked + .btn-outline-info, .btn-check:active + .btn-outline-info, .btn-outline-info:active, .btn-outline-info.active, .btn-outline-info.dropdown-toggle.show {
+  color: #000;
+  background-color: #d6cbc1;
+  border-color: #d6cbc1;
+}
+.btn-check:checked + .btn-outline-info:focus, .btn-check:active + .btn-outline-info:focus, .btn-outline-info:active:focus, .btn-outline-info.active:focus, .btn-outline-info.dropdown-toggle.show:focus {
+  box-shadow: 0 0 0 0.25rem rgba(214, 203, 193, 0.5);
+}
+.btn-outline-info:disabled, .btn-outline-info.disabled {
+  color: #d6cbc1;
+  background-color: transparent;
+}
+
+.btn-outline-warning {
+  color: rgba(233, 33, 19, 0.787);
+  border-color: rgba(233, 33, 19, 0.787);
+}
+.btn-outline-warning:hover {
+  color: #000;
+  background-color: rgba(233, 33, 19, 0.787);
+  border-color: rgba(233, 33, 19, 0.787);
+}
+.btn-check:focus + .btn-outline-warning, .btn-outline-warning:focus {
+  box-shadow: 0 0 0 0.25rem rgba(233, 33, 19, 0.5);
+}
+.btn-check:checked + .btn-outline-warning, .btn-check:active + .btn-outline-warning, .btn-outline-warning:active, .btn-outline-warning.active, .btn-outline-warning.dropdown-toggle.show {
+  color: #000;
+  background-color: rgba(233, 33, 19, 0.787);
+  border-color: rgba(233, 33, 19, 0.787);
+}
+.btn-check:checked + .btn-outline-warning:focus, .btn-check:active + .btn-outline-warning:focus, .btn-outline-warning:active:focus, .btn-outline-warning.active:focus, .btn-outline-warning.dropdown-toggle.show:focus {
+  box-shadow: 0 0 0 0.25rem rgba(233, 33, 19, 0.5);
+}
+.btn-outline-warning:disabled, .btn-outline-warning.disabled {
+  color: rgba(233, 33, 19, 0.787);
   background-color: transparent;
 }
 
@@ -4431,12 +4659,48 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  color: #985340;
-  background-color: #ffe8e1;
-  border-color: #ffdcd2;
+  color: #880e06;
+  background-color: #f9d1ce;
+  border-color: #f7b9b6;
 }
 .alert-primary .alert-link {
-  color: #7a4233;
+  color: #6d0b05;
+}
+
+.alert-secondary {
+  color: #873a20;
+  background-color: #f9dfd7;
+  border-color: #f6cfc3;
+}
+.alert-secondary .alert-link {
+  color: #6c2e1a;
+}
+
+.alert-success {
+  color: #80655c;
+  background-color: #f7eeeb;
+  border-color: #f3e5e1;
+}
+.alert-success .alert-link {
+  color: #66514a;
+}
+
+.alert-info {
+  color: #56514d;
+  background-color: #f7f5f3;
+  border-color: #f3efec;
+}
+.alert-info .alert-link {
+  color: #45413e;
+}
+
+.alert-warning {
+  color: rgba(115, 16, 9, 0.8722);
+  background-color: rgba(252, 224, 222, 0.9574);
+  border-color: rgba(250, 207, 204, 0.9361);
+}
+.alert-warning .alert-link {
+  color: rgba(87, 12, 7, 0.89776);
 }
 
 @keyframes progress-bar-stripes {
@@ -4707,17 +4971,73 @@ textarea.form-control-lg {
 }
 
 .list-group-item-primary {
-  color: #985340;
-  background-color: #ffe8e1;
+  color: #880e06;
+  background-color: #f9d1ce;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #985340;
-  background-color: #e6d1cb;
+  color: #880e06;
+  background-color: #e0bcb9;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #985340;
-  border-color: #985340;
+  background-color: #880e06;
+  border-color: #880e06;
+}
+
+.list-group-item-secondary {
+  color: #873a20;
+  background-color: #f9dfd7;
+}
+.list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
+  color: #873a20;
+  background-color: #e0c9c2;
+}
+.list-group-item-secondary.list-group-item-action.active {
+  color: #fff;
+  background-color: #873a20;
+  border-color: #873a20;
+}
+
+.list-group-item-success {
+  color: #80655c;
+  background-color: #f7eeeb;
+}
+.list-group-item-success.list-group-item-action:hover, .list-group-item-success.list-group-item-action:focus {
+  color: #80655c;
+  background-color: #ded6d4;
+}
+.list-group-item-success.list-group-item-action.active {
+  color: #fff;
+  background-color: #80655c;
+  border-color: #80655c;
+}
+
+.list-group-item-info {
+  color: #56514d;
+  background-color: #f7f5f3;
+}
+.list-group-item-info.list-group-item-action:hover, .list-group-item-info.list-group-item-action:focus {
+  color: #56514d;
+  background-color: #dedddb;
+}
+.list-group-item-info.list-group-item-action.active {
+  color: #fff;
+  background-color: #56514d;
+  border-color: #56514d;
+}
+
+.list-group-item-warning {
+  color: rgba(115, 16, 9, 0.8722);
+  background-color: rgba(252, 224, 222, 0.9574);
+}
+.list-group-item-warning.list-group-item-action:hover, .list-group-item-warning.list-group-item-action:focus {
+  color: rgba(115, 16, 9, 0.8722);
+  background-color: rgba(225, 200, 198, 0.96166);
+}
+.list-group-item-warning.list-group-item-action.active {
+  color: #fff;
+  background-color: rgba(115, 16, 9, 0.8722);
+  border-color: rgba(115, 16, 9, 0.8722);
 }
 
 .btn-close {
@@ -5720,10 +6040,38 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #FE8B6A;
+  color: #e3170a;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #fea288;
+  color: #b61208;
+}
+
+.link-secondary {
+  color: #e16036;
+}
+.link-secondary:hover, .link-secondary:focus {
+  color: #e7805e;
+}
+
+.link-success {
+  color: #d6a99a;
+}
+.link-success:hover, .link-success:focus {
+  color: #debaae;
+}
+
+.link-info {
+  color: #d6cbc1;
+}
+.link-info:hover, .link-info:focus {
+  color: #ded5cd;
+}
+
+.link-warning {
+  color: rgba(233, 33, 19, 0.787);
+}
+.link-warning:hover, .link-warning:focus {
+  color: rgba(239, 95, 85, 0.8296);
 }
 
 .ratio {
@@ -6117,7 +6465,23 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #FE8B6A !important;
+  border-color: #e3170a !important;
+}
+
+.border-secondary {
+  border-color: #e16036 !important;
+}
+
+.border-success {
+  border-color: #d6a99a !important;
+}
+
+.border-info {
+  border-color: #d6cbc1 !important;
+}
+
+.border-warning {
+  border-color: rgba(233, 33, 19, 0.787) !important;
 }
 
 .border-white {
@@ -6922,6 +7286,26 @@ textarea.form-control-lg {
   color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-secondary {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-secondary-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-success {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-success-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-info {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-info-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-warning {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-warning-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -6976,6 +7360,26 @@ textarea.form-control-lg {
 .bg-primary {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-secondary {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-secondary-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-success {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-info {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-info-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-warning {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-warning-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
