--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,36 @@
-.b_background{
-    background-color: rgb(214, 255, 214);
+.image-carousel{
+    height: 480px;
+    background-position: center;
+    background-size: cover;
+
 }
+
+.image1{
+    background-image:  linear-gradient(to bottom,rgba(255, 164, 60, 0), rgba(254, 138, 106, 0.623)), url(https://vivirmejor.mx/wp-content/uploads/2020/08/Comida-Tipica-Mexicana-Pozole-Portada.jpg);
+}
+
+.image2{
+    background-image: linear-gradient(to bottom,rgba(255, 164, 60, 0), rgba(254, 138, 106, 0.623)),url(https://sevilla.abc.es/gurme/wp-content/uploads/sites/24/2012/01/comida-rapida-casera.jpg);
+}
+
+.image3{
+    background-image: linear-gradient(to bottom,rgba(255, 164, 60, 0), rgba(254, 138, 106, 0.623)),url(https://wp.acercandonaciones.com/wp-content/uploads/2020/03/cocina-mexicana.jpg);
+}
+
+.image4{
+    background-image: url(https://s1.eestatic.com/2015/03/31/cocinillas/cocinillas_22257914_116018277_1706x960.jpg);
+
+}
+
+
+.texti {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.limit {
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+    overflow: hidden;
+}
+
