--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,7 +1,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-light bg-light navi" >
         <div class="container-fluid texti">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="/">
             <img src="https://i.ibb.co/jHdbpns/imagen-2021-10-25-212241.png" alt="" width="100" height="80" class="d-inline-block align-text-top">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
