--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,8 @@
 }
 
 .image4{
-    background-image: url(https://s1.eestatic.com/2015/03/31/cocinillas/cocinillas_22257914_116018277_1706x960.jpg);
+    background-image: url(https://www.mexicodesconocido.com.mx/wp-content/uploads/2018/04/comida-mexicana-1.jpg);
+    padding-bottom: 50rem;
 
 }
 
