--- a/templates/index.html
+++ b/templates/index.html
@@ -19,22 +19,22 @@
               <div class="carousel-item active">
                   <div class="image-carousel image1"></div>
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Receta 1</h5>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="image-carousel image2"></div>
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Receta 2</h5>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="image-carousel image3"></div>
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Receta 3</h5>
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
                 </div>
               </div>
             </div>
@@ -115,18 +115,4 @@
         </div>
     </div> 
     </a>
-    <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted">
-  <!-- Section: Social media -->
-
-  <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    Hecho con <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-suit-heart-fill" viewBox="0 0 16 16">
-      <path d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z"/>
-    </svg> por el 
-    <a class="text-reset fw-bold" href="https://cdp.esfm-x.com/">CdP ESFM</a>
-  </div>
-  <!-- Copyright -->
-</footer>
-<!-- Footer -->
 {% endblock %}
